[gd_scene load_steps=5 format=2]

[ext_resource path="res://Asset/World Asset/Free Pixel Art Forest/PNG/Background layers/Background.png" type="Texture" id=1]
[ext_resource path="res://Asset/Miscellaneous Asset/LevelButton.png" type="Texture" id=2]
[ext_resource path="res://Asset/Miscellaneous Asset/LevelButtonPressed.png" type="Texture" id=3]
[ext_resource path="res://Scene/Miscellaneous Scene/Word Select.gd" type="Script" id=4]

[node name="Word Select" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="WorldSelect" type="Label" parent="."]
anchor_left = 0.1
anchor_top = 0.089
anchor_right = 0.225
anchor_bottom = 0.128
margin_top = -0.0400009
margin_right = 1.0
margin_bottom = -0.0800018
text = "World Select"

[node name="RESET" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 576.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -324.0
text = "RESET"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="world1" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2( 64, 64 )
normal = ExtResource( 2 )
pressed = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="CanvasLayer/world1"]
margin_left = 8.0
margin_top = 16.0
margin_right = 40.0
margin_bottom = 47.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "1
"
align = 1
valign = 1

[node name="world2" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2( 128, 64 )
normal = ExtResource( 2 )
pressed = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="CanvasLayer/world2"]
margin_left = 8.0
margin_top = 16.0
margin_right = 40.0
margin_bottom = 47.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "2

"
align = 1
valign = 1

[node name="world3" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2( 192, 64 )
normal = ExtResource( 2 )
pressed = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="CanvasLayer/world3"]
margin_left = 8.0
margin_top = 16.0
margin_right = 40.0
margin_bottom = 47.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "3

"
align = 1
valign = 1

[node name="world4" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2( 256, 64 )
normal = ExtResource( 2 )
pressed = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="CanvasLayer/world4"]
margin_left = 8.0
margin_top = 16.0
margin_right = 40.0
margin_bottom = 47.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "4

"
align = 1
valign = 1

[node name="world5" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2( 320, 64 )
normal = ExtResource( 2 )
pressed = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="CanvasLayer/world5"]
margin_left = 8.0
margin_top = 16.0
margin_right = 40.0
margin_bottom = 47.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "5

"
align = 1
valign = 1

[connection signal="pressed" from="RESET" to="." method="_on_RESET_pressed"]
